--- a/config/database.yml
+++ b/config/database.yml
@@ -24,6 +24,8 @@ default: &default
 development:
   <<: *default
   database: ProtoTypr_development
+  host: localhost
+  user: Gwyneplaine1
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
