--- a/config/database.yml
+++ b/config/database.yml
@@ -25,7 +25,7 @@ development:
   <<: *default
   database: ProtoTypr_development
   host: localhost
-  user: Gwyneplaine1
+  user: charleslee
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
